add spec, create a model

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -59,3 +59,10 @@ logger.application=DEBUG
 dbplugin = disabled
 evolutionplugin = disabled
 ehcacheplugin = disabled
+
+mongodb.default.db = "mydb"
+# Optional values
+#mongodb.default.host = "127.0.0.1"
+#mongodb.default.port = 27017
+#mongodb.default.user = "leon"
+#mongodb.default.password = "123456"
